--- a/ebook_app/pubspec.yaml
+++ b/ebook_app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_staggered_grid_view: ^0.4.1
+  intl: ^0.17.0
   cloud_firestore: ^3.1.9
   eva_icons_flutter: ^3.1.0
 
